# deorbiter

./: .gitignore  README.md  pyproject.toml  requirements.txt  simulator.py  test_gui.py
Docs/source/: conf.py  deorbit.observer.rst  deorbit.simulator.rst  deorbit.utils.rst  index.rst  modules.rst
data_models/: __init__.py  sim.py
docs/source/: conf.py  constants.rst  dataio.rst  index.rst  observer.rst  plotting.rst  predictor.rst  simulator.rst
examples/: 3D_EKF_example.ipynb  EKFOnline_example.ipynb  EKF_example.ipynb  EKF_example_2.ipynb  Test_adj_sim_on_EKF.py  atmos_visualization.ipynb  atmos_volocity_test.ipynb  crash_uncertainty.ipynb  ekf_heatmap.ipynb  heatmap_example.ipynb  observation_example.ipynb  observation_example_3D.ipynb  observer_tests.ipynb  presentation.ipynb  presentation.slides.html  profile_ekf.py  report.ipynb  simulation_example.ipynb  simulation_example1.ipynb  simulation_example2.ipynb  simulation_example3.ipynb  simulation_example_3D.ipynb  simulation_example_with_noise.ipynb  total_error.ipynb
examples/profiling/: profile_ekf.prof
gui/: gui.py  main.py  utils.py  worker.py
src/data_models/: __init__.py  sim.py
src/deorbit/: __init__.py
src/deorbit/data_models/: __init__.py  atmos.py  methods.py  noise.py  obs.py  sim.py
src/deorbit/observer/: __init__.py  observer.py  observer_tests.ipynb
src/deorbit/predictor/: 3D_EKF.py  EKF.py  (+3 more)
src/simulator/: atmos.py  simulator.py
src/utils/: constants.py  dataio.py
tests/: test_atmos.py  test_coords.py  test_data_io.py  test_data_models.py  test_sim.py
utils/: dataio.py
(+12 files in other folders)
